k8s/deployement.yaml
# kubectl create secret docker-registry ghcr-auth-secret --docker-server=ghcr.io --docker-username=ruthl7 --docker-password=<GHCR_TOKEN> -n nemes-balazs-ferenc

apiVersion: v1
kind: Namespace
metadata:
  name: nemes-balazs-ferenc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: nemes-balazs-ferenc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipvalidation-backend
  template:
    metadata:
      labels:
        app: ipvalidation-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/ruthl7/ip-validator-backend:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: nemes-balazs-ferenc
spec:
  selector:
    app: ipvalidation-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: nemes-balazs-ferenc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipvalidation-frontend
  template:
    metadata:
      labels:
        app: ipvalidation-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ruthl7/ip-validator-frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: nemes-balazs-ferenc
spec:
  selector:
    app: ipvalidation-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipvalidation-ingress
  namespace: nemes-balazs-ferenc
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.13.39/32
spec:
  ingressClassName: nginx
  rules:
    - host: nemesbalazs-ipvalidation.jcloud.jedlik.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
